@@ -359,6 +359,8 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.2.32
 =========================
  -- Disable scancel of job in RootOnly partition only for sched/wiki2 (Moab).
+    Permit user scancel from other configurations.
+ -- Add support for sbatch --distribution and --network options.
 
 * Changes in SLURM 1.2.31
 =========================
